# routes/index.js
@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'))
-router.use('/contacts', require('./contacts'))
+router.use('/users', require('./users'))
+router.use('/drugstores', require('./drugstore'))
 
 module.exports = router;
